# projio

./: .gitattributes  .gitignore  .gitmodules  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  RELEASE.md  mkdocs.yml  pyproject.toml
.cache/indexio/chroma_db/: chroma.sqlite3  indexio.status.json
.claude/: .nfs000000071dbbaf9a000030f6  .nfs000000071f052787000034e4  settings.json
.codio/: catalog.yml  profiles.yml
.datalad/: config
.github/workflows/: docs.yml
.projio/: config.yml  packages.yml  projio.mk
.projio/codio/: repos.yml
.projio/indexio/: config.yaml
.projio/indexio/jobs/: build-2c461102.json  build-3498a900.json  build-391c87de.json  build-43e76d5f.json  build-7b7709e9.json  build-8b9613da.json  build-92d47c91.json  build-cb0b08ca.json
.projio/skills/figio-guide/: SKILL.md
.projio/skills/questio-ground/: SKILL.md
.projio/skills/questio-next/: SKILL.md
.projio/skills/questio-record/: SKILL.md
.projio/skills/questio-report/: SKILL.md
.projio/skills/questio-session/: SKILL.md
bib/config/: biblio.yml  rag.yaml
docs/: index.md
docs/explanation/: agent-safety.md  architecture.md  ecosystem.md  index.md  package-integration.md  questio.md  search-before-creation.md  vscode-extension.md  workspace-architecture.md
docs/how-to/: index.md  init.md  mcp.md  siblings.md  site.md
docs/javascripts/: mermaid-init.js
docs/log/: agent-activity.md  index.md  mkdocs.yml
docs/log/idea/: deep-research-pipeio-scope.md  idea-arash-20260312-163007-395316.md  idea-arash-20260326-155537-817950.md  idea-arash-20260329-174758-559960.md  idea-arash-20260329-224328-304553.md  idea-arash-20260330-010344-522695.md  idea-arash-20260330-162752-883803.md  idea-arash-20260330-174518-164647.md  idea-arash-20260331-003958-077273.md  idea-arash-20260331-022337-352248.md  idea-arash-20260331-033442-033443.md  idea-arash-20260331-034700-514331.md  idea-arash-20260331-144156-755098.md  idea-arash-20260403-172004-817050.md  idea-arash-20260407-010140-074558.md  idea-arash-20260407-171834-423514.md  idea-arash-20260407-172837-671335.md  idea-arash-20260407-225436-752515.md  idea-arash-20260408-035007-479946.md  idea-arash-20260408-035035-245990.md  idea-arash-20260408-035900-963875.md  index.md
docs/log/issue/: index.md  issue-arash-20260326-142709-728239.md  issue-arash-20260326-162053-576639.md  issue-arash-20260326-174001-720656.md  issue-arash-20260326-185404-161144.md  issue-arash-20260326-185435-586786.md  issue-arash-20260326-185507-424521.md  issue-arash-20260326-191057-730671.md  issue-arash-20260326-232713-565171.md  issue-arash-20260326-232732-019412.md  issue-arash-20260326-232746-941302.md  issue-arash-20260327-141525-036428.md  issue-arash-20260327-155921-977015.md  issue-arash-20260328-011416-121323.md  issue-arash-20260328-145700-791144.md  issue-arash-20260328-174906-119594.md  issue-arash-20260328-192146-858687.md  issue-arash-20260328-193353-406929.md  issue-arash-20260328-193406-431554.md  issue-arash-20260328-193442-340432.md  issue-arash-20260328-193731-044867.md  issue-arash-20260328-200538-374654.md  issue-arash-20260329-223209-991822.md  issue-arash-20260330-031350-558222.md  issue-arash-20260330-191230-344783.md  issue-arash-20260331-034216-830892.md  issue-arash-20260331-034232-267346.md  (+50 more)
docs/log/task/: index.md  (+122 more)
docs/pipelines/: index.md
docs/prompts/: implement-workflow-skills.md  migrate-skills-to-projio.md  update-pixecog-projio-tools.md
docs/reference/: cli.md  configuration.md  index.md  mcp-tools.md  workspace-layout.md
docs/tutorial/: project-setup.md
docs/tutorials/: agent-ingestion.md  agent-orchestration.md  ecosystem-overview.md  grand-routine.md  index.md  note-workflow.md  project-setup.md  questio-setup.md  quickstart.md  search-pipeline.md  shared-codelib.md  site-workflow.md
editors/vscode/: README.md  package-lock.json  package.json
site/: 404.html  index.html  sitemap.xml
site/explanation/: index.html
site/how-to/: index.html
site/log/: index.html
site/reference/: index.html
site/search/: search_index.json
site/tutorials/: index.html
src/projio/: __init__.py  __main__.py  cli.py  config.py  init.py  manuscript_cmd.py  render.py  site.py  skills.py  status.py  sync.py  url.py
study/: Makefile  mkdocs.yml
study/.projio/: config.yml
study/docs/: study-overview.md
tests/: test_cli.py  test_config.py  test_helpers.py  test_projio.py  test_regression.py  test_site.py
tool/: .gitignore  Makefile  mkdocs.yml  pyproject.toml
tool/.projio/: Makefile  config.yml  mkdocs.yml  packages.yml  projio.mk
tool/.projio/.projio/: config.yml
tool/.projio/docs/: index.md
tool/bib/: Makefile
tool/src/tool/: __init__.py
tool/tests/: test_tool.py
(+134 files in other folders)
